--- a/html/index4.html
+++ b/html/index4.html
@@ -69,20 +69,20 @@
 
     <body>
         <div class="container mt-5 mx-6">
-            <h2 class="text-center text-success mb-4">História</h2>
+            <h2 class="text-center text-success mb-4" style=" font-size: 48px;">História</h2>
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <img src="coelho.jpg" class="img-fluid rounded" alt="Imagem da história" style="height: 350px; width: auto;">
                 </div>
                 <div class="col-md-8">
-                    <p>
+                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
                         Na escola infantil Toca do Coelho, a tradição católica sempre foi parte fundamental da sua história,
                         transmitida de geração em geração com o mesmo carinho e respeito desde a sua fundação. A escola nasceu do
                         sonho de uma família católica, há mais de [XX] anos, que acreditava que a fé deveria ser cultivada desde a
                         infância, junto com o ensino escolar. Desde o princípio, o objetivo foi criar um espaço onde os valores
                         cristãos pudessem ser vividos diariamente, tanto dentro quanto fora da sala de aula.
                     </p>
-                    <p>
+                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
                         Os fundadores da Toca do Coelho eram pessoas profundamente comprometidas com a fé católica e queriam que as
                         crianças tivessem a oportunidade de crescer em um ambiente que refletisse esses princípios. Com o passar do
                         tempo, seus filhos, e mais tarde seus netos, assumiram a direção da escola, mantendo viva essa essência e
@@ -94,17 +94,17 @@
             </div>
     
             <div class="row align-items-center mt-5">
-                <div class="col-md-6 order-md-2">
+                <div class="col-md-5 order-md-2">
                     <img src="assistente.jpg" class="img-fluid rounded" alt="Imagem de Santo">
                 </div>
-                <div class="col-md-6 order-md-1">
-                    <p>
+                <div class="col-md-7 order-md-1">
+                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
                         Na Toca do Coelho, a ligação com a Virgem Maria é uma parte essencial da espiritualidade da escola, refletindo
                         o profundo respeito e carinho que a comunidade escolar tem por sua figura maternal. Desde a fundação da
                         escola, a Virgem Maria tem sido vista como um modelo de fé, amor e cuidado, e sua presença é sentida em
                         diversas práticas e tradições que permeiam o cotidiano da instituição.
                     </p>
-                    <p>
+                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
                         A devoção à Virgem Maria é incorporada nas atividades diárias, começando pelas orações matinais, onde os
                         alunos são incentivados a fazer uma pequena oração pedindo a proteção e a intercessão de Maria. Esse momento
                         de espiritualidade não só inicia o dia com um espírito positivo, mas também ajuda as crianças a desenvolverem
@@ -133,19 +133,17 @@
             </div>
             <div class="row">
                 <div class="col-4 px-5">
-                    <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400" target="_blank" rel="noopener noreferrer">
-                    <p>St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
+                    <i class="bi bi-geo-alt-fill fs-2"></i>
+                    <p style="font-size: 20px;">St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
+                </div>
+                <div class="col-4 px-5">
+                    <i class="bi bi-whatsapp fs-2"></i>
+                    <p style="font-size: 20px;">61 9 9999-9999</p>
                     </a>
                 </div>
                 <div class="col-4 px-5">
-                    <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer"></a>
-                    <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                    <p>61 9 9999-9999</p>
-                    </a>
-                </div>
-                <div class="col-4 px-5">
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"></a>
-                    <p>@tocadocoelho</p>
+                    <i class="bi bi-instagram fs-2"></i>
+                    <p style="font-size: 20px;">@tocadocoelho</p>
                 </div>
             </div>
         </div>
