update fontes index1

--- a/html/index.2.html
+++ b/html/index.2.html
@@ -22,9 +22,9 @@
                 <div  class="col col-sm-4 col-md-4 col-xl-4"><img src="coelho.jpg" class="logo-img " ></div>
                 <div class="col col-sm-4 col-md-4 col-xl-4">
                     <div>
-                        <h1 class="display-3" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
+                        <h1 class="display-3 text-center" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
                     </div>
-                        <p>Escoal infantil</p>
+                        <h3 class="display-6 text-center" style="font-family: 'Abhaya Libre', serif; color: #D4996E;">Escola infantil</h3>
                     </div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 d-flex justify-content-end">
                     <a href="https://whatsapp.com" class="ms-3"><img src="icons8-whatsapp-50.png" alt="WhatsApp" width="30"></a>
