--- a/html/index.1.html
+++ b/html/index.1.html
@@ -20,9 +20,9 @@
                 <div  class="col col-sm-4 col-md-4 col-xl-4"><img src="coelho (1).jpg" class="logo-img " ></div>
                 <div class="col col-sm-4 col-md-4 col-xl-4">
                     <div class="">
-                        <h1>Toca do Coelho</h1>
+                        <h1 class="display-3 text-center" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
                     </div>
-                        <p>Escoal infantil</p>
+                        <h3 class="display-6 text-center" style="font-family: 'Abhaya Libre', serif; color: #D4996E;">Escola infantil</h3>
                     </div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 d-flex justify-content-end">
                     <a href="https://whatsapp.com" class="ms-3"><img src="icons8-whatsapp-50.png" alt="WhatsApp" width="30"></a>
@@ -86,16 +86,16 @@
     </div>
 
     <div class="container my-5">
-        <h2 id="SobreNos" class="mb-4">Sobre nós</h2>
+        <h2 id="SobreNos" class="mb-4 display-4" style="font-family: Bowlby One;">Sobre nós</h2>
         <div class="row align-items-center">
             <div class="col-lg-8">
-                <p class="lead">
+                <p class="lead fw-bold" style="font-family: roboto;">
                     Na Toca do Coelho, nossa missão é proporcionar um ambiente acolhedor e estimulante para o desenvolvimento integral das crianças. Com mais de [XX] anos de história, somos uma instituição de referência no cuidado e na educação infantil, oferecendo um espaço onde os pequenos podem aprender, crescer e brincar com segurança.
                 </p>
-                <p>
+                <p class="lead fw-bold" style="font-family: roboto;">
                     Ao longo de nossa trajetória, nos destacamos pela excelência no ensino e pela dedicação da nossa equipe de profissionais altamente qualificados. Nosso compromisso é com a formação de crianças curiosas, criativas e preparadas para o futuro, sempre respeitando os valores da infância e promovendo o desenvolvimento cognitivo, emocional e social.
                 </p>
-                <p>
+                <p class="lead fw-bold" style="font-family: roboto;">
                     Somos reconhecidos por nossa abordagem inovadora e por criar um ambiente familiar que fortalece a confiança entre escola e família, formando uma verdadeira parceria para o bem-estar e o crescimento dos nossos alunos. A Toca do Coelho é um lugar onde as crianças aprendem com alegria, em um ambiente que incentiva a descoberta, a autonomia e a construção de amizades.
                 </p>
             </div>
@@ -106,13 +106,13 @@
     </div>
     
     <div class="container my-5">
-        <h2 class="mb-5">Manchetes de destaques</h2>
+        <h2 class="mb-5 display-5" style="font-family: Bowlby One;">Manchetes de destaques</h2>
         <div class="row align-items-center">
             <div class="col-lg-3">
                 <img src="jornal1.jpg" alt="Jornal 1" class="img-fluid"  style="width:350px; height: auto;">
             </div>
             <div class="col-lg-9">
-                <p class="fs-3 lh-base lead">"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</p>
+                <p class="fs-3 lh-base lead fst-italic" style="font-family: roboto;">"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</p>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@
                 <img src="jornal2.jpg" alt="Jornal 2" class="img-fluid"  style="width:350px; height: auto;">
             </div>
             <div class="col-lg-9">
-                <p class="fs-3 lh-base lead">"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos."
+                <p class="fs-3 lh-base lead fst-italic" style="font-family: roboto;">"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos."
                 </p>
             </div>
         </div>
