update fontes index4

--- a/html/index4.html
+++ b/html/index4.html
@@ -21,9 +21,9 @@
                 <div  class="col col-sm-4 col-md-4 col-xl-4"><img src="coelho (1).jpg" class="logo-img " ></div>
                 <div class="col col-sm-4 col-md-4 col-xl-4">
                     <div class="">
-                        <h1>Toca do Coelho</h1>
+                        <h1 class="display-3 text-center" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
                     </div>
-                        <p>Escoal infantil</p>
+                        <h3 class="display-6 text-center" style="font-family: 'Abhaya Libre', serif; color: #D4996E;">Escola infantil</h3>
                     </div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 d-flex justify-content-end">
                     <a href="https://whatsapp.com" class="ms-3"><img src="icons8-whatsapp-50.png" alt="WhatsApp" width="30"></a>
@@ -69,20 +69,20 @@
 
     <body>
         <div class="container mt-5 mx-6">
-            <h2 class="text-center text-success mb-4" style=" font-size: 48px;">História</h2>
+            <h2 class="text-center text-white mb-5 display-4 fw-bold" style="font-family: Bowlby One;">História</h2>
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <img src="coelho.jpg" class="img-fluid rounded" alt="Imagem da história" style="height: 350px; width: auto;">
                 </div>
                 <div class="col-md-8">
-                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
+                    <p class="lead fw-bold" style="font-family: roboto;">
                         Na escola infantil Toca do Coelho, a tradição católica sempre foi parte fundamental da sua história,
                         transmitida de geração em geração com o mesmo carinho e respeito desde a sua fundação. A escola nasceu do
                         sonho de uma família católica, há mais de [XX] anos, que acreditava que a fé deveria ser cultivada desde a
                         infância, junto com o ensino escolar. Desde o princípio, o objetivo foi criar um espaço onde os valores
                         cristãos pudessem ser vividos diariamente, tanto dentro quanto fora da sala de aula.
                     </p>
-                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
+                    <p class="lead fw-bold" style="font-family: roboto;">
                         Os fundadores da Toca do Coelho eram pessoas profundamente comprometidas com a fé católica e queriam que as
                         crianças tivessem a oportunidade de crescer em um ambiente que refletisse esses princípios. Com o passar do
                         tempo, seus filhos, e mais tarde seus netos, assumiram a direção da escola, mantendo viva essa essência e
@@ -93,18 +93,18 @@
                 </div>
             </div>
     
-            <div class="row align-items-center mt-5">
+            <div class="row align-items-center mt-5 mb-4">
                 <div class="col-md-5 order-md-2">
                     <img src="assistente.jpg" class="img-fluid rounded" alt="Imagem de Santo">
                 </div>
                 <div class="col-md-7 order-md-1">
-                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
+                    <p class="lead fw-bold" style="font-family: roboto;">
                         Na Toca do Coelho, a ligação com a Virgem Maria é uma parte essencial da espiritualidade da escola, refletindo
                         o profundo respeito e carinho que a comunidade escolar tem por sua figura maternal. Desde a fundação da
                         escola, a Virgem Maria tem sido vista como um modelo de fé, amor e cuidado, e sua presença é sentida em
                         diversas práticas e tradições que permeiam o cotidiano da instituição.
                     </p>
-                    <p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">
+                    <p class="lead fw-bold" style="font-family: roboto;">
                         A devoção à Virgem Maria é incorporada nas atividades diárias, começando pelas orações matinais, onde os
                         alunos são incentivados a fazer uma pequena oração pedindo a proteção e a intercessão de Maria. Esse momento
                         de espiritualidade não só inicia o dia com um espírito positivo, mas também ajuda as crianças a desenvolverem
