--- a/html/index.1.html
+++ b/html/index.1.html
@@ -21,9 +21,9 @@
                 <div  class="col col-sm-4 col-md-4 col-xl-4 "><img src="coelho (1).jpg" class="logo-img " ></div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 ">
                     <div class="d-flex justify-content-center">
-                        <h1>Toca do Coelho</h1>
+                        <h1 class="d-flex justify-content-center" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
                     </div>
-                <p class="text-warning d-flex justify-content-center">Escoal infantil</p>
+                    <h3 class="d-flex justify-content-center" style="font-family: 'Abhaya Libre', serif; color: #D4996E;">Escola infantil</h3>
                 </div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 d-flex justify-content-end">
                     <a href="href=https://whatsapp.com" class="link-offset-2 link-underline link-underline-opacity-0 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" rel="noopener noreferrer" >
@@ -61,16 +61,16 @@
                             <div class="offcanvas-body">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#SobreNos">Sobre nós</a>
+                                        <a class="nav-link text-white" href="#SobreNos">Sobre nós</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.2.html">Matrículas</a>
+                                        <a class="nav-link text-white" href="index.2.html">Matrículas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.3.html">Atividades Extras</a>
+                                        <a class="nav-link text-white" href="index.3.html">Atividades Extras</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.4.html">História</a>
+                                        <a class="nav-link text-white" href="index.4.html">História</a>
                                     </li>
                                 </ul>
                             </div>
@@ -94,16 +94,16 @@
     </main>
     
     <section class="container-fluid my-5">
-        <h2 id="SobreNos">Sobre nós</h2>
+        <h2 id="SobreNos" class="mb-4 d-flex fs-1 fw-bold" style="font-family: Bowlby One;">Sobre nós</h2>
         <div class="row">
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class="lead">
+                <p class="lead fst-italic" style="font-family: roboto;">
                     Na Toca do Coelho, nossa missão é proporcionar um ambiente acolhedor e estimulante para o desenvolvimento integral das crianças. Com mais de [XX] anos de história, somos uma instituição de referência no cuidado e na educação infantil, oferecendo um espaço onde os pequenos podem aprender, crescer e brincar com segurança.
                 </p>
-                <p>
+                <p class="lead fst-italic" style="font-family: roboto;">
                     Ao longo de nossa trajetória, nos destacamos pela excelência no ensino e pela dedicação da nossa equipe de profissionais altamente qualificados. Nosso compromisso é com a formação de crianças curiosas, criativas e preparadas para o futuro, sempre respeitando os valores da infância e promovendo o desenvolvimento cognitivo, emocional e social.
                 </p>
-                <p>
+                <p class="lead fst-italic" style="font-family: roboto;">
                     Somos reconhecidos por nossa abordagem inovadora e por criar um ambiente familiar que fortalece a confiança entre escola e família, formando uma verdadeira parceria para o bem-estar e o crescimento dos nossos alunos. A Toca do Coelho é um lugar onde as crianças aprendem com alegria, em um ambiente que incentiva a descoberta, a autonomia e a construção de amizades.
                 </p>
             </div>
@@ -114,10 +114,10 @@
     </section>
     
     <section class="container-fluid my-5">
-        <h2 id="SobreNos">Manchetes de destaquess</h2>
+        <h2 id="SobreNos" class="mb-5 d-flex fs-1 fw-bold" style="font-family: Bowlby One;">Manchetes de destaques</h2>
         <div class="row">
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class="lead">"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</p>
+                <p class="fs-3 lh-base lead fst-italic" style="font-family: roboto;">"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <img src="jornal2.jpg" alt="Assistente" class="img-fluid">
@@ -131,7 +131,7 @@
                 <img src="jornal1.jpg" alt="Assistente" class="img-fluid">
             </div>
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class=" lead">"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos."
+                <p class="fs-3 lh-base lead fst-italic" style="font-family: roboto;">"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos."
             </div>
         </div>
     </section>
