update index 3 e 4 fontes

--- a/html/index.3.html
+++ b/html/index.3.html
@@ -18,12 +18,12 @@
     <header class="bg-success text-white">
         <div class="container-fluid py-5 px-1">
             <div class="row text-center text-sm-end ">
-                <div  class="col col-sm-4 col-md-4 col-xl-4 "><img src="coelho.jpg" class="logo-img " ></div>
+                <div  class="col col-sm-4 col-md-4 col-xl-4 "><img src="coelho (1).jpg" class="logo-img " ></div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 ">
                     <div class="d-flex justify-content-center">
-                        <h1>Toca do Coelho</h1>
+                        <h1 class="d-flex justify-content-center" style="font-family: 'Abhaya Libre', serif;">Toca do Coelho</h1>
                     </div>
-                <p class="text-warning d-flex justify-content-center">Escola infantil</p>
+                    <h3 class="d-flex justify-content-center" style="font-family: 'Abhaya Libre', serif; color: #D4996E;">Escola infantil</h3>
                 </div>
                 <div class="col col-sm-4 col-md-4 col-xl-4 d-flex justify-content-end">
                     <a href="href=https://whatsapp.com" class="link-offset-2 link-underline link-underline-opacity-0 link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" rel="noopener noreferrer" >
@@ -61,16 +61,16 @@
                             <div class="offcanvas-body">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#SobreNos">Sobre nós</a>
+                                        <a class="nav-link text-white" href="#SobreNos">Sobre nós</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.2.html">Matrículas</a>
+                                        <a class="nav-link text-white" href="index.2.html">Matrículas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.3.html">Atividades Extras</a>
+                                        <a class="nav-link text-white" href="index.3.html">Atividades Extras</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.4.html">História</a>
+                                        <a class="nav-link text-white" href="index.4.html">História</a>
                                     </li>
                                 </ul>
                             </div>
@@ -89,10 +89,10 @@
     </main>
     
     <section class="container-fluid my-5">
-        <h2 id="SobreNos">Atividades Extras</h2>
+        <h2 id="SobreNos" class="mb-4 d-flex fs-1 fw-bold" style="font-family: Bowlby One;">Atividades Extras</h2>
         <div class="row">
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class="lead">
+                <p class="lead fst-italic" style="font-family: roboto;">
                     Na Toca do Coelho, acreditamos que o desenvolvimento das crianças vai além da sala de aula. Por isso, oferecemos uma série de atividades extracurriculares que estimulam a criatividade, a saúde e a socialização. Entre elas, destacam-se Dança e Natação, duas atividades que promovem benefícios essenciais para o crescimento integral dos pequenos. A aula de dança é uma oportunidade única para que as crianças explorem a expressão corporal, criatividade e ritmo. Além de ser uma atividade divertida, a dança é fundamental para o desenvolvimento da coordenação motora, equilíbrio e autoconfiança. Benefícios da Dança: Coordenação motora: Movimentos que ajudam a fortalecer a agilidade e o controle corporal. Expressão emocional: A dança permite que as crianças expressem seus sentimentos de forma criativa. Socialização: As aulas em grupo ajudam a desenvolver habilidades de cooperação e trabalho em equipe. Disciplina e concentração: As coreografias ensinam foco e paciência, enquanto os pequenos aprendem a seguir instruções.
                 </p>
             </div>
@@ -103,10 +103,10 @@
     </section>
     
     <section class="container-fluid my-5">
-        <h2 id="SobreNos">Lutas</h2>
+        <h2 id="SobreNos" class="mb-4 d-flex fs-1 fw-bold" style="font-family: Bowlby One;">Lutas</h2>
         <div class="row">
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class="lead">Na Toca do Coelho, o Tatame de Luta é uma atividade extracurricular que vai além do físico, promovendo o desenvolvimento integral das crianças. Durante as aulas de artes marciais, os alunos não só melhoram sua força e coordenação, mas também aprendem valores importantes como disciplina, respeito e autocontrole. O ambiente do tatame ensina a importância de seguir regras e respeitar o próximo, enquanto o progresso nas técnicas eleva a autoconfiança dos pequenos. Com um enfoque lúdico e seguro, essa atividade fortalece tanto o corpo quanto a mente, proporcionando aprendizado e diversão.</p>
+                <p class="lead fst-italic" style="font-family: roboto;">Na Toca do Coelho, o Tatame de Luta é uma atividade extracurricular que vai além do físico, promovendo o desenvolvimento integral das crianças. Durante as aulas de artes marciais, os alunos não só melhoram sua força e coordenação, mas também aprendem valores importantes como disciplina, respeito e autocontrole. O ambiente do tatame ensina a importância de seguir regras e respeitar o próximo, enquanto o progresso nas técnicas eleva a autoconfiança dos pequenos. Com um enfoque lúdico e seguro, essa atividade fortalece tanto o corpo quanto a mente, proporcionando aprendizado e diversão.</p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <img src="tatame.jpg" alt="Assistente" class="img-fluid">
@@ -120,7 +120,7 @@
                 <img src="jornal1.jpg" alt="Assistente" class="img-fluid">
             </div>
             <div class="col-lg-8 col-md-12 mb-3">
-                <p class=" lead">Na Toca do Coelho, a horta escolar é uma atividade que combina educação, diversão e contato direto com a natureza, oferecendo às crianças uma experiência rica em aprendizado prático. Cuidar da horta vai além de apenas plantar e colher; é uma forma de ensinar os alunos sobre o ciclo de vida das plantas, a importância de cuidar do meio ambiente e o valor da alimentação saudável. Durante as atividades na horta, as crianças aprendem sobre diversos tipos de vegetais, ervas e frutas, descobrindo como eles crescem e o que precisam para se desenvolver. Isso desperta nas crianças uma curiosidade natural, incentivando perguntas e reflexões sobre o mundo ao seu redor. O processo de preparar a terra, plantar as sementes e acompanhar o crescimento das plantas ensina lições importantes de paciência e responsabilidade, já que elas mesmas se tornam as cuidadoras do que plantaram. Além de todos esses benefícios educacionais, a horta também proporciona momentos de socialização. As crianças trabalham em grupo, aprendendo a colaborar e dividir tarefas, o que fortalece o senso de comunidade e cooperação. Juntos, eles discutem ideias, dividem responsabilidades e celebram os frutos do seu trabalho coletivo, o que enriquece tanto o aprendizado quanto as relações interpessoais.
+                <p class="lead fst-italic" style="font-family: roboto;">Na Toca do Coelho, a horta escolar é uma atividade que combina educação, diversão e contato direto com a natureza, oferecendo às crianças uma experiência rica em aprendizado prático. Cuidar da horta vai além de apenas plantar e colher; é uma forma de ensinar os alunos sobre o ciclo de vida das plantas, a importância de cuidar do meio ambiente e o valor da alimentação saudável. Durante as atividades na horta, as crianças aprendem sobre diversos tipos de vegetais, ervas e frutas, descobrindo como eles crescem e o que precisam para se desenvolver. Isso desperta nas crianças uma curiosidade natural, incentivando perguntas e reflexões sobre o mundo ao seu redor. O processo de preparar a terra, plantar as sementes e acompanhar o crescimento das plantas ensina lições importantes de paciência e responsabilidade, já que elas mesmas se tornam as cuidadoras do que plantaram. Além de todos esses benefícios educacionais, a horta também proporciona momentos de socialização. As crianças trabalham em grupo, aprendendo a colaborar e dividir tarefas, o que fortalece o senso de comunidade e cooperação. Juntos, eles discutem ideias, dividem responsabilidades e celebram os frutos do seu trabalho coletivo, o que enriquece tanto o aprendizado quanto as relações interpessoais.
             </div>
         </div>
     </section>
