--- a/html/index.3.html
+++ b/html/index.3.html
@@ -61,16 +61,16 @@
                             <div class="offcanvas-body">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="#SobreNos">Sobre nós</a>
+                                        <a class="nav-link" href="#SobreNos">Sobre nós</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="index.2.html">Matrículas</a>
+                                        <a class="nav-link" href="index.2.html">Matrículas</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="index.3.html">Atividades Extras</a>
+                                        <a class="nav-link" href="index.3.html">Atividades Extras</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white" href="index.4.html">História</a>
+                                        <a class="nav-link" href="index.4.html">História</a>
                                     </li>
                                 </ul>
                             </div>
